# tks_technical_test

./: Makefile  README.md  dev.env  docker-compose.yml  dockerfile  main.py  pyproject.toml
app/api/endpoints/: inspector_endpoints.py  task_assignment_endpoints.py  task_endpoints.py
app/core/config/: settings.py
app/core/db/: base.py  session.py
app/core/models/: models.py
app/core/schemas/: inspector_schemas.py  task_assignment_schemas.py  task_schemas.py
app/services/: inspector_service.py  task_assignment_service.py  task_service.py
tests/endpoints/: inspector_endpoints_tests.py
tests/services/: inspector_service_tests.py  task_assignment_service_test.py  task_service_tests.py
